# effectful-cereal

./: README.md  effectful-cereal.cabal
examples/: Person.hs
src/: Word.hs
src/Effectful/: Cereal.hs
